cmake_minimum_required(VERSION 2.6)

PROJECT(WidgetWithoutApplication)

FIND_PACKAGE(Qt4 REQUIRED)
INCLUDE(${QT_USE_FILE})

ADD_EXECUTABLE(NonGUICode NonGUICode.cpp)
TARGET_LINK_LIBRARIES(NonGUICode ${QT_LIBRARIES})

ADD_EXECUTABLE(GUICode GUICode.cpp)
TARGET_LINK_LIBRARIES(GUICode ${QT_LIBRARIES})

ADD_EXECUTABLE(GUICodeWithApplication GUICodeWithApplication.cpp)
TARGET_LINK_LIBRARIES(GUICodeWithApplication ${QT_LIBRARIES})

QT4_WRAP_CPP(MOCSrcs DrawVisitor.h Form.h)
ADD_EXECUTABLE(Works Works.cpp ${MOCSrcs})
TARGET_LINK_LIBRARIES(Works ${QT_LIBRARIES})
